manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mars-viking
  namespace: mars-viking
  labels:
    app: mars-viking
    release: mars-viking
spec:
  ports:
  - port: 4000
    protocol: TCP
    name: http
  selector:
    app: mars-viking
    release: mars-viking
...
